--- a/lib/dedalo/component_portal/html/component_portal_print.phtml
+++ b/lib/dedalo/component_portal/html/component_portal_print.phtml
@@ -76,7 +76,7 @@
 
 
 					# COLUMNS
-						$table .= "<tr class=\"tr_sortable\">";
+						$table .= "<tr class=\"portal_item_{$tipo} tr_sortable\">";
 						#foreach ((array)$rows as $key => $current_value) {
 						foreach ($ar_columns as $column_tipo => $column_label) {										
 
